--- a/index.html
+++ b/index.html
@@ -64,9 +64,62 @@
                 </div>
             </div>
         </section>
+
+        <section id="portfolio">
+          <div class="bawah">
+            <div class="kolom">
+              <h2>Portfolio</h2>
+            </div>
+
+            <div class="portfolio-list">
+              <div class="portfolio">
+                  <img src="Assets/HTML.png"/>
+                  <p>HTML</p>
+              </div>
+              <div class="portfolio">
+                  <img src="Assets/CSS.png"/>
+                  <p>CSS</p>
+              </div>
+              <div class="portfolio">
+                  <img src="Assets/Javascript.png"/>
+                  <p>Javascript</p>
+              </div>
+              <div class="portfolio">
+                  <img src="Assets/MySQL.png"/>
+                  <p>MySQL</p>
+              </div>
+              <div class="portfolio-list2">
+                <div class="portfolio">
+                    <img src="Assets/HTML.png"/>
+                    <p>HTML</p>
+                </div>
+                <div class="portfolio">
+                    <img src="Assets/CSS.png"/>
+                    <p>CSS</p>
+                </div>
+                <div class="portfolio">
+                    <img src="Assets/Javascript.png"/>
+                    <p>Javascript</p>
+                </div>
+                <div class="portfolio">
+                    <img src="Assets/MySQL.png"/>
+                    <p>MySQL</p>
+                </div>
+            </div>
+          </div>
+
+
+
+
+          </div>
+
+        </section>
+
     </div>
         
    
+
+
     <footer id="contact" class="footer-distributed">
      
           <div class="footer-left">
