mini project programmer males;

--- a/index.html
+++ b/index.html
@@ -72,45 +72,50 @@
             </div>
 
             <div class="portfolio-list">
-              <div class="portfolio">
-                  <img src="Assets/HTML.png"/>
-                  <p>HTML</p>
+             <div class="portfolio">
+                 <a href="https://www.canva.com/design/DAFUn7KE7aQ/QLZC1e0cGEnxAHztIYEjUA/view?utm_content=DAFUn7KE7aQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+                  <img src="Assets/Mobile.png"/>
+                  <p>Mobile Apps Design</p></a>
               </div>
               <div class="portfolio">
-                  <img src="Assets/CSS.png"/>
-                  <p>CSS</p>
+                <a href="https://teukuardhi.netlify.app" target="_blank">
+                <img src="Assets/WebDev.png"/>
+                <p>Web Portfolio</p></a>
               </div>
               <div class="portfolio">
-                  <img src="Assets/Javascript.png"/>
-                  <p>Javascript</p>
+                <a href="https://kiplirning.edukati.com/my/">
+                <img src="Assets/Kiplirning.png"/>
+                <p>LMS E-Learning</p></a>
               </div>
               <div class="portfolio">
-                  <img src="Assets/MySQL.png"/>
-                  <p>MySQL</p>
-              </div>
+                <a href="https://www.canva.com/design/DAFXUgMUGLw/O-XLJQC0JgjKjq6A1fBcMA/watch?utm_content=DAFXUgMUGLw&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
+                <img src="Assets/Banner.png"/>
+                <p>Banner Design</p></a>
+            </div>
+
               <div class="portfolio-list2">
                 <div class="portfolio">
-                    <img src="Assets/HTML.png"/>
-                    <p>HTML</p>
+                  <a href="https://github.com/WeissDhi/belajar-html-dan-css" targt="_blank">
+                  <img src="Assets/belajarhtml.png"/>
+                  <p>HTML LEARNING</p></a>
                 </div>
                 <div class="portfolio">
-                    <img src="Assets/CSS.png"/>
-                    <p>CSS</p>
+                  <a href="https://github.com/WeissDhi/Program-Java-Menghitung-Matrix" target="_blank">
+                  <img src="Assets/Java.png"/>
+                  <p>Matrix Program with Java</p></a>
                 </div>
                 <div class="portfolio">
-                    <img src="Assets/Javascript.png"/>
-                    <p>Javascript</p>
+                  <a href="https://github.com/WeissDhi/rpg-game-with-c" target="_blank">
+                    <img src="Assets/C.png"/>
+                    <p>RPG Game with C</p></a>
                 </div>
                 <div class="portfolio">
-                    <img src="Assets/MySQL.png"/>
-                    <p>MySQL</p>
+                    <a href="https://github.com/WeissDhi/Learning-kotlin-basic" target="_blank">
+                    <img src="Assets/kotlin.png"/>
+                    <p>Fundamental Kotlin</p></a>
                 </div>
             </div>
           </div>
-
-
-
-
           </div>
 
         </section>
