--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <section id="skills">
             <div class="tengah">
                 <div class="kolom">
-                    <h2>Skills</h2>
+                    <h2 class="sub">Skills</h2>
                 </div>
 
                 <div class="skill-list">
@@ -68,7 +68,7 @@
         <section id="portfolio">
           <div class="bawah">
             <div class="kolom">
-              <h2>Portfolio</h2>
+              <h2 class="sub">Portfolio</h2>
             </div>
 
             <div class="portfolio-list">
