Mini Project Programmer Males;

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <nav>
         <div class="wrapper">
-            <div class="logo"><a href=''><span>Teuku</span>Dev</a></div>
+            <div class="logo"><a href='#'><span>Teuku</span>Dev</a></div>
             <div class="menu">
                 <ul>
-                    <li><a href="">About</a></li>
+                    <li><a href="#">About</a></li>
                     <li><a href="#skills">Skill</a></li>
-                    <li><a href="#">Portfolio</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#contact" class="tbl-contact">Contact Me</a></li>
                 </ul>
             </div>
@@ -31,7 +31,7 @@
             <img class="gambar" src="Assets/GambarTeuku.png" width="450px" height="450px"/>
             <div class="kolom">
                 <p class="deskripsi"></p>
-                <h2>Hello!, I Am Teuku Ardhi </h2>
+                <h2>Hello! I Am Teuku Ardhi </h2>
                 <p>I am a college student at Gunadarma University who is interested in web development.</p>
                 <p><a href="https://drive.google.com/drive/u/0/folders/1PZ0qOyHznv3H3BCunCFjoJdrq4QdAS6-  " target="_blank" class="tbl-hire" >Hire Me</a></p>
             </div>
@@ -45,6 +45,10 @@
                 </div>
 
                 <div class="skill-list">
+                   <div class="skill">
+                      <img src="Assets/Designer.png"/>
+                      <p>Design</p>
+                    </div>
                     <div class="skill">
                         <img src="Assets/HTML.png"/>
                         <p>HTML</p>
@@ -56,10 +60,6 @@
                     <div class="skill">
                         <img src="Assets/Javascript.png"/>
                         <p>Javascript</p>
-                    </div>
-                    <div class="skill">
-                        <img src="Assets/MySQL.png"/>
-                        <p>MySQL</p>
                     </div>
                 </div>
             </div>
@@ -75,15 +75,15 @@
              <div class="portfolio">
                  <a href="https://www.canva.com/design/DAFUn7KE7aQ/QLZC1e0cGEnxAHztIYEjUA/view?utm_content=DAFUn7KE7aQ&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton" target="_blank">
                   <img src="Assets/Mobile.png"/>
-                  <p>Mobile Apps Design</p></a>
+                  <p>Mobile App Design</p></a>
               </div>
               <div class="portfolio">
                 <a href="https://teukuardhi.netlify.app" target="_blank">
                 <img src="Assets/WebDev.png"/>
-                <p>Web Portfolio</p></a>
+                <p>Portfolio Web</p></a>
               </div>
               <div class="portfolio">
-                <a href="https://kiplirning.edukati.com/my/">
+                <a href="https://kiplirning.edukati.com/my/" target="_blank">
                 <img src="Assets/Kiplirning.png"/>
                 <p>LMS E-Learning</p></a>
               </div>
@@ -95,7 +95,7 @@
 
               <div class="portfolio-list2">
                 <div class="portfolio">
-                  <a href="https://github.com/WeissDhi/belajar-html-dan-css" targt="_blank">
+                  <a href="https://github.com/WeissDhi/belajar-html-dan-css" target="_blank">
                   <img src="Assets/belajarhtml.png"/>
                   <p>HTML LEARNING</p></a>
                 </div>
